Fixed z-index issue with faq

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,6 +624,9 @@ label {
     text-align: left;
 }
 
+#faqhpnocollapse{
+    z-index:1;
+}
 
 /*---------------------------------------Footer*/
 .footer-quote {
